Import of LDS/Boulder-1.23 from CPAN.
gitpan-cpan-distribution: Boulder
gitpan-cpan-version:      1.23
gitpan-cpan-path:         LDS/Boulder-1.23.tar.gz
gitpan-cpan-author:       LDS
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-13  Lincoln Stein  <lstein@cshl.org>
+	* (version 1.23)
+	* Boulder::Genbank now correctly handles sequences that
+	 	use whitespace to represent gaps
+
 2001-06-11  Lincoln Stein  <lstein@cshl.org>
 	* (version 1.22)
 	* now reports BatchEntry errors to standard error
