Import of LDS/Boulder-1.26 from CPAN.
gitpan-cpan-distribution: Boulder
gitpan-cpan-version:      1.26
gitpan-cpan-path:         LDS/Boulder-1.26.tar.gz
gitpan-cpan-author:       LDS
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 24 14:21:02 EST 2002
+	* (Version 1.26)
+	* Partial fix for Entrez retrieval, but Entrez queries don't work :-(
+	
 2001-12-28  Lincoln Stein <lstein@cshl.org>
 	* (version 1.25)
 	* fixed GB_Stone bugs that prevented parsing of some of the feature fields
